--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <link rel="stylesheet" href="/css/border.css">
-    <link rel="stylesheet" href="/css/font/iconfont.css">
-    <link rel="stylesheet" href="/css/reset.css">
+
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport"
+            content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+        <link rel="stylesheet" href="/css/border.css">
+        <link rel="stylesheet" href="/css/font/iconfont.css">
+        <link rel="stylesheet" href="/css/reset.css">
+        <script src="/js//fastclick.js"></script>
+        <title>React App</title>
+    </head>
+
+    <body>
+        <div id="root"></div>
+    </body>
     <script>
         document.documentElement.style.fontSize = document.documentElement.clientWidth / 3.75 + "px";
     </script>
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+    <script>
+        if ('addEventListener' in document) {
+            document.addEventListener('DOMContentLoaded', function () {
+                FastClick.attach(document.body);
+            }, false);
+        }
+    </script>
+
 </html>
